add support for embedding into sage  * send and receive events from the parent document  * change styling to be more flat  * change build settings to serve the app at arbitrary paths  * add server.js script to host the app locally for SAGE  * modify download function to send an event containing the questionnaire instead

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Skjemabygger</title>
   </head>
-  <body>
+  <body style="overflow-y: scroll;"> <!-- SAGE: always show scroll bar (iframe troubles) -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
